<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/atp_rankings"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

        <androidx.gridlayout.widget.GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/rank"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:layout_gravity="start|center_vertical" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:paddingStart="10dp"
                android:text="@string/cc"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:text="@string/name"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:layout_gravity="start|center_vertical" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/points"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:layout_gravity="center_vertical|end" />
        </androidx.gridlayout.widget.GridLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="256dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ListView
                    android:id="@+id/list_atp_players"
                    android:layout_width="match_parent"
                    android:layout_height="245dp" />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>